// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Always Show All 1`] = `
<ds-field>
  <label for="<generated>">
    Viser alle options også når valgt
  </label>
  <ds-suggestion>
    <data
      value="Sogndal"
      aria-label="Sogndal, Press to remove"
      role="option"
      slot="items"
      tabindex="-1"
    >
      Sogndal
    </data>
    <input
      placeholder
      type="text"
      id="<generated>"
      list="<generated>"
      popovertarget="<generated>"
      aria-autocomplete="list"
      aria-controls="<generated>"
      aria-expanded="true"
      autocomplete="off"
      enterkeyhint="done"
      role="combobox"
    >
    <button
      aria-expanded="true"
      aria-label="Valg"
      type="button"
      aria-hidden="false"
      hidden
      tabindex="-1"
    >
    </button>
    <button
      aria-label="Tøm"
      type="reset"
      aria-hidden="false"
      tabindex="-1"
    >
    </button>
    <u-datalist
      data-nofilter
      data-sr-plural="%d forslag"
      data-sr-singular="%d forslag"
      popover="manual"
      role="listbox"
      data-sr-of="of"
      tabindex="-1"
      aria-multiselectable="false"
      id="<generated>"
      data-is-floating="true"
      aria-label="Viser alle options også når valgt"
      style="<removed>"
      data-floating="bottom"
    >
      <u-option
        data-empty
        hidden
        label="Sogndal"
        value
        role="option"
        aria-disabled="false"
        aria-selected="false"
        id="<generated>"
        aria-hidden="true"
      >
      </u-option>
      <u-option
        selected
        role="option"
        aria-disabled="false"
        aria-selected="true"
        id="<generated>"
        aria-hidden="false"
      >
        Sogndal
      </u-option>
      <u-option
        role="option"
        aria-disabled="false"
        aria-selected="false"
        id="<generated>"
        aria-hidden="false"
      >
        Oslo
      </u-option>
      <u-option
        role="option"
        aria-disabled="false"
        aria-selected="false"
        id="<generated>"
        aria-hidden="false"
      >
        Brønnøysund
      </u-option>
      <u-option
        role="option"
        aria-disabled="false"
        aria-selected="false"
        id="<generated>"
        aria-hidden="false"
      >
        Stavanger
      </u-option>
      <u-option
        role="option"
        aria-disabled="false"
        aria-selected="false"
        id="<generated>"
        aria-hidden="false"
      >
        Trondheim
      </u-option>
      <u-option
        role="option"
        aria-disabled="false"
        aria-selected="false"
        id="<generated>"
        aria-hidden="false"
      >
        Bergen
      </u-option>
      <u-option
        role="option"
        aria-disabled="false"
        aria-selected="false"
        id="<generated>"
        aria-hidden="false"
      >
        Lillestrøm
      </u-option>
    </u-datalist>
  </ds-suggestion>
</ds-field>
`;

exports[`Controlled Independent Label Value 1`] = `
<ds-field>
  <label for="<generated>">
    Velg person
  </label>
  <ds-suggestion>
    <data
      value="#004"
      aria-label="Lars, Press to remove"
      role="option"
      slot="items"
      tabindex="-1"
    >
      Lars
    </data>
    <input
      placeholder
      type="text"
      id="<generated>"
      list="<generated>"
      popovertarget="<generated>"
      aria-autocomplete="list"
      aria-controls="<generated>"
      aria-expanded="true"
      autocomplete="off"
      enterkeyhint="done"
      role="combobox"
    >
    <button
      aria-expanded="true"
      aria-label="Valg"
      type="button"
      aria-hidden="false"
      hidden
      tabindex="-1"
    >
    </button>
    <button
      aria-label="Tøm"
      type="reset"
      aria-hidden="false"
      tabindex="-1"
    >
    </button>
    <u-datalist
      data-nofilter
      data-sr-plural="%d forslag"
      data-sr-singular="%d forslag"
      popover="manual"
      role="listbox"
      data-sr-of="of"
      tabindex="-1"
      aria-multiselectable="false"
      id="<generated>"
      data-is-floating="true"
      aria-label="Velg person"
      style="<removed>"
      data-floating="bottom"
    >
      <u-option
        data-empty
        hidden
        label="Lars"
        value
        role="option"
        aria-disabled="false"
        aria-selected="false"
        id="<generated>"
        aria-hidden="true"
      >
      </u-option>
      <u-option
        label="Lars"
        value="#004"
        selected
        role="option"
        aria-disabled="false"
        aria-selected="true"
        id="<generated>"
        aria-hidden="false"
      >
        Lars
      </u-option>
      <u-option
        label="James"
        value="#007"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        id="<generated>"
        aria-hidden="false"
      >
        James
      </u-option>
      <u-option
        label="Nina"
        value="#113"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        id="<generated>"
        aria-hidden="false"
      >
        Nina
      </u-option>
      <u-option
        label="Tove"
        value="#110"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        id="<generated>"
        aria-hidden="false"
      >
        Tove
      </u-option>
    </u-datalist>
  </ds-suggestion>
</ds-field>
<hr
  aria-hidden="true"
  style="<removed>"
>
<div style="<removed>">
  Valgt person:
  <pre style="<removed>">
    {"label":"Lars","value":"#004"}
  </pre>
</div>
<button
  data-variant="secondary"
  type="button"
>
  Sett Nina
</button>
`;

exports[`Controlled Multiple 1`] = `
<ds-field>
  <label for="<generated>">
    Velg destinasjoner
  </label>
  <ds-suggestion data-multiple>
    <data
      value="Sogndal"
      aria-label="Sogndal, Press to remove"
      role="option"
      slot="items"
      tabindex="-1"
    >
      Sogndal
    </data>
    <data
      value="Stavanger"
      aria-label="Stavanger, Press to remove"
      role="option"
      slot="items"
      tabindex="-1"
    >
      Stavanger
    </data>
    <input
      placeholder
      type="text"
      id="<generated>"
      aria-description="Navigate left to find 2 selected"
      list="<generated>"
      popovertarget="<generated>"
    >
    <button
      aria-expanded="false"
      aria-label="Valg"
      type="button"
      aria-hidden="false"
      tabindex="-1"
    >
    </button>
    <button
      aria-label="Tøm"
      hidden
      type="reset"
      aria-hidden="false"
      tabindex="-1"
    >
    </button>
    <u-datalist
      data-nofilter
      data-sr-plural="%d forslag"
      data-sr-singular="%d forslag"
      popover="manual"
      role="listbox"
      data-sr-of="of"
      hidden
      tabindex="-1"
      aria-multiselectable="true"
      id="<generated>"
      data-is-floating="true"
    >
      <u-option
        data-empty
        hidden
        label
        value
        role="option"
        aria-disabled="false"
        aria-selected="false"
        id="<generated>"
      >
      </u-option>
      <u-option
        label="Sogndal"
        value="Sogndal"
        role="option"
        aria-disabled="false"
        aria-selected="true"
        id="<generated>"
        selected
      >
        Sogndal
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Oslo"
        value="Oslo"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        id="<generated>"
      >
        Oslo
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Brønnøysund"
        value="Brønnøysund"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        id="<generated>"
      >
        Brønnøysund
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Stavanger"
        value="Stavanger"
        role="option"
        aria-disabled="false"
        aria-selected="true"
        id="<generated>"
        selected
      >
        Stavanger
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Trondheim"
        value="Trondheim"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        id="<generated>"
      >
        Trondheim
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Bergen"
        value="Bergen"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        id="<generated>"
      >
        Bergen
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Lillestrøm"
        value="Lillestrøm"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        id="<generated>"
      >
        Lillestrøm
        <div>
          Kommune
        </div>
      </u-option>
    </u-datalist>
  </ds-suggestion>
</ds-field>
<hr
  aria-hidden="true"
  style="<removed>"
>
<p style="<removed>">
  Valgte reisemål: Sogndal, Stavanger
</p>
<button type="button">
  Sett reisemål til Sogndal, Stavanger
</button>
`;

exports[`Controlled Multiple Creatable 1`] = `
<ds-field>
  <label for="<generated>">
    Velg destinasjoner
  </label>
  <ds-suggestion
    data-multiple
    data-creatable
  >
    <data
      value="Oslo"
      aria-label="Added Finnes ikke, Oslo, Press to remove"
      role="option"
      slot="items"
      tabindex="-1"
    >
      Oslo
    </data>
    <data
      value="Finnes ikke"
      aria-label="Added Finnes ikke, Finnes ikke, Press to remove"
      role="option"
      slot="items"
      tabindex="-1"
    >
      Finnes ikke
    </data>
    <input
      placeholder
      type="text"
      id="<generated>"
      aria-description="Navigate left to find 2 selected"
      list="<generated>"
      popovertarget="<generated>"
      aria-autocomplete="list"
      aria-controls="<generated>"
      aria-expanded="true"
      autocomplete="off"
      enterkeyhint="done"
      role="combobox"
      aria-label="Added Finnes ikke, Velg destinasjoner"
    >
    <button
      aria-expanded="true"
      aria-label="Valg"
      type="button"
      aria-hidden="false"
      tabindex="-1"
      hidden
    >
    </button>
    <button
      aria-label="Tøm"
      type="reset"
      aria-hidden="false"
      tabindex="-1"
    >
    </button>
    <u-datalist
      data-nofilter
      data-sr-plural="%d forslag"
      data-sr-singular="%d forslag"
      popover="manual"
      role="listbox"
      data-sr-of="of"
      tabindex="-1"
      aria-multiselectable="true"
      id="<generated>"
      data-is-floating="true"
      aria-label="Velg destinasjoner"
      style="<removed>"
      data-floating="bottom"
    >
      <u-option
        data-empty="Legg til «{value}»"
        label="Finnes ikke"
        value="Finnes ikke"
        data-create="Legg til «Finnes ikke»"
        role="option"
        aria-disabled="false"
        aria-selected="true"
        id="<generated>"
        aria-hidden="false"
        selected
      >
      </u-option>
      <u-option
        label="Sogndal"
        value="Sogndal"
        role="option"
        aria-disabled="true"
        aria-selected="false"
        id="<generated>"
        aria-hidden="true"
        disabled
      >
        Sogndal
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Oslo"
        value="Oslo"
        selected
        role="option"
        aria-disabled="true"
        aria-selected="true"
        id="<generated>"
        aria-hidden="true"
        disabled
      >
        Oslo
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Brønnøysund"
        value="Brønnøysund"
        role="option"
        aria-disabled="true"
        aria-selected="false"
        id="<generated>"
        aria-hidden="true"
        disabled
      >
        Brønnøysund
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Stavanger"
        value="Stavanger"
        role="option"
        aria-disabled="true"
        aria-selected="false"
        id="<generated>"
        aria-hidden="true"
        disabled
      >
        Stavanger
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Trondheim"
        value="Trondheim"
        role="option"
        aria-disabled="true"
        aria-selected="false"
        id="<generated>"
        aria-hidden="true"
        disabled
      >
        Trondheim
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Bergen"
        value="Bergen"
        role="option"
        aria-disabled="true"
        aria-selected="false"
        id="<generated>"
        aria-hidden="true"
        disabled
      >
        Bergen
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Lillestrøm"
        value="Lillestrøm"
        role="option"
        aria-disabled="true"
        aria-selected="false"
        id="<generated>"
        aria-hidden="true"
        disabled
      >
        Lillestrøm
        <div>
          Kommune
        </div>
      </u-option>
    </u-datalist>
  </ds-suggestion>
</ds-field>
<hr
  aria-hidden="true"
  style="<removed>"
>
<p style="<removed>">
  Valgte reisemål: Oslo, Finnes ikke
</p>
<button type="button">
  Sett reisemål til Sogndal, Stavanger
</button>
`;

exports[`Controlled Single 1`] = `
<ds-field>
  <label for="<generated>">
    Velg destinasjon
  </label>
  <ds-suggestion>
    <data
      value="Sogndal"
      aria-label="Sogndal, Press to remove"
      role="option"
      slot="items"
      tabindex="-1"
    >
      Sogndal
    </data>
    <input
      placeholder
      type="text"
      id="<generated>"
      list="<generated>"
      popovertarget="<generated>"
    >
    <button
      aria-expanded="false"
      aria-label="Valg"
      type="button"
      aria-hidden="false"
      tabindex="-1"
      hidden
    >
    </button>
    <button
      aria-label="Tøm"
      type="reset"
      aria-hidden="false"
      tabindex="-1"
    >
    </button>
    <u-datalist
      data-nofilter
      data-sr-plural="%d forslag"
      data-sr-singular="%d forslag"
      popover="manual"
      role="listbox"
      data-sr-of="of"
      hidden
      tabindex="-1"
      aria-multiselectable="false"
      id="<generated>"
      data-is-floating="true"
    >
      <u-option
        data-empty
        hidden
        label="Sogndal"
        value
        role="option"
        aria-disabled="false"
        aria-selected="false"
        id="<generated>"
      >
      </u-option>
      <u-option
        label="Sogndal"
        value="Sogndal"
        role="option"
        aria-disabled="false"
        aria-selected="true"
        id="<generated>"
        selected
      >
        Sogndal
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Oslo"
        value="Oslo"
        role="option"
        aria-disabled="true"
        aria-selected="false"
        id="<generated>"
        disabled
      >
        Oslo
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Brønnøysund"
        value="Brønnøysund"
        role="option"
        aria-disabled="true"
        aria-selected="false"
        id="<generated>"
        disabled
      >
        Brønnøysund
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Stavanger"
        value="Stavanger"
        role="option"
        aria-disabled="true"
        aria-selected="false"
        id="<generated>"
        disabled
      >
        Stavanger
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Trondheim"
        value="Trondheim"
        role="option"
        aria-disabled="true"
        aria-selected="false"
        id="<generated>"
        disabled
      >
        Trondheim
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Bergen"
        value="Bergen"
        role="option"
        aria-disabled="true"
        aria-selected="false"
        id="<generated>"
        disabled
      >
        Bergen
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Lillestrøm"
        value="Lillestrøm"
        role="option"
        aria-disabled="true"
        aria-selected="false"
        id="<generated>"
        disabled
      >
        Lillestrøm
        <div>
          Kommune
        </div>
      </u-option>
    </u-datalist>
  </ds-suggestion>
</ds-field>
<hr
  aria-hidden="true"
  style="<removed>"
>
<p style="<removed>">
  Valgte reisemål: Sogndal
</p>
<button type="button">
  Sett reisemål til Sogndal
</button>
`;

exports[`Controlled Single Creatable 1`] = `
<ds-field>
  <label for="<generated>">
    Velg destinasjon
  </label>
  <ds-suggestion data-creatable>
    <data
      value="Finnes ikke"
      aria-label="Finnes ikke, Press to remove"
      role="option"
      slot="items"
      tabindex="-1"
    >
      Finnes ikke
    </data>
    <input
      placeholder
      type="text"
      id="<generated>"
      list="<generated>"
      popovertarget="<generated>"
      aria-autocomplete="list"
      aria-controls="<generated>"
      aria-expanded="false"
      autocomplete="off"
      enterkeyhint="done"
      role="combobox"
    >
    <button
      aria-expanded="false"
      aria-label="Valg"
      type="button"
      aria-hidden="false"
      tabindex="-1"
      hidden
    >
    </button>
    <button
      aria-label="Tøm"
      type="reset"
      aria-hidden="false"
      tabindex="-1"
    >
    </button>
    <u-datalist
      data-nofilter
      data-sr-plural="%d forslag"
      data-sr-singular="%d forslag"
      popover="manual"
      role="listbox"
      data-sr-of="of"
      tabindex="-1"
      aria-multiselectable="false"
      id="<generated>"
      data-is-floating="true"
      aria-label="Velg destinasjon"
      style="<removed>"
      data-floating="bottom"
      hidden
    >
      <u-option
        data-empty="Legg til «{value}»"
        label="Finnes ikke"
        value="Finnes ikke"
        data-create="Legg til «Finnes ikke»"
        role="option"
        aria-disabled="false"
        aria-selected="true"
        id="<generated>"
        aria-hidden="false"
        selected
      >
      </u-option>
      <u-option
        label="Sogndal"
        value="Sogndal"
        role="option"
        aria-disabled="true"
        aria-selected="false"
        id="<generated>"
        aria-hidden="true"
        disabled
      >
        Sogndal
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Oslo"
        value="Oslo"
        role="option"
        aria-disabled="true"
        aria-selected="false"
        id="<generated>"
        aria-hidden="true"
        disabled
      >
        Oslo
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Brønnøysund"
        value="Brønnøysund"
        role="option"
        aria-disabled="true"
        aria-selected="false"
        id="<generated>"
        aria-hidden="true"
        disabled
      >
        Brønnøysund
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Stavanger"
        value="Stavanger"
        role="option"
        aria-disabled="true"
        aria-selected="false"
        id="<generated>"
        aria-hidden="true"
        disabled
      >
        Stavanger
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Trondheim"
        value="Trondheim"
        role="option"
        aria-disabled="true"
        aria-selected="false"
        id="<generated>"
        aria-hidden="true"
        disabled
      >
        Trondheim
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Bergen"
        value="Bergen"
        role="option"
        aria-disabled="true"
        aria-selected="false"
        id="<generated>"
        aria-hidden="true"
        disabled
      >
        Bergen
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Lillestrøm"
        value="Lillestrøm"
        role="option"
        aria-disabled="true"
        aria-selected="false"
        id="<generated>"
        aria-hidden="true"
        disabled
      >
        Lillestrøm
        <div>
          Kommune
        </div>
      </u-option>
    </u-datalist>
  </ds-suggestion>
</ds-field>
<hr
  aria-hidden="true"
  style="<removed>"
>
<p style="<removed>">
  Valgte reisemål: Finnes ikke
</p>
<button type="button">
  Sett reisemål til Sogndal
</button>
`;

exports[`Creatable 1`] = `
<ds-field>
  <label for="<generated>">
    Velg en destinasjon
  </label>
  <ds-suggestion data-creatable>
    <input
      placeholder
      type="text"
      id="<generated>"
      list="<generated>"
      popovertarget="<generated>"
      aria-autocomplete="list"
      aria-controls="<generated>"
      aria-expanded="true"
      autocomplete="off"
      enterkeyhint="done"
      role="combobox"
    >
    <button
      aria-expanded="true"
      aria-label="Valg"
      type="button"
      aria-hidden="false"
      tabindex="-1"
      hidden
    >
    </button>
    <button
      aria-label="Tøm"
      type="reset"
      aria-hidden="false"
      tabindex="-1"
    >
    </button>
    <u-datalist
      data-nofilter
      data-sr-plural="%d forslag"
      data-sr-singular="%d forslag"
      popover="manual"
      role="listbox"
      data-sr-of="of"
      tabindex="-1"
      aria-multiselectable="false"
      id="<generated>"
      data-is-floating="true"
      aria-label="Velg en destinasjon"
      style="<removed>"
      data-floating="bottom"
    >
      <u-option
        data-empty="Legg til «{value}»"
        label="Finnes ikke"
        value="Finnes ikke"
        data-create="Legg til «Finnes ikke»"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        id="<generated>"
        aria-hidden="false"
      >
      </u-option>
      <u-option
        label="Sogndal"
        value="Sogndal"
        role="option"
        aria-disabled="true"
        aria-selected="false"
        id="<generated>"
        aria-hidden="true"
        disabled
      >
        Sogndal
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Oslo"
        value="Oslo"
        role="option"
        aria-disabled="true"
        aria-selected="false"
        id="<generated>"
        aria-hidden="true"
        disabled
      >
        Oslo
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Brønnøysund"
        value="Brønnøysund"
        role="option"
        aria-disabled="true"
        aria-selected="false"
        id="<generated>"
        aria-hidden="true"
        disabled
      >
        Brønnøysund
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Stavanger"
        value="Stavanger"
        role="option"
        aria-disabled="true"
        aria-selected="false"
        id="<generated>"
        aria-hidden="true"
        disabled
      >
        Stavanger
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Trondheim"
        value="Trondheim"
        role="option"
        aria-disabled="true"
        aria-selected="false"
        id="<generated>"
        aria-hidden="true"
        disabled
      >
        Trondheim
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Bergen"
        value="Bergen"
        role="option"
        aria-disabled="true"
        aria-selected="false"
        id="<generated>"
        aria-hidden="true"
        disabled
      >
        Bergen
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Lillestrøm"
        value="Lillestrøm"
        role="option"
        aria-disabled="true"
        aria-selected="false"
        id="<generated>"
        aria-hidden="true"
        disabled
      >
        Lillestrøm
        <div>
          Kommune
        </div>
      </u-option>
    </u-datalist>
  </ds-suggestion>
</ds-field>
`;

exports[`Custom Filter Alt 1 1`] = `
<ds-field>
  <label for="<generated>">
    Skriv inn et tall mellom 1-6
  </label>
  <ds-suggestion>
    <input
      placeholder
      type="text"
      id="<generated>"
      list="<generated>"
      popovertarget="<generated>"
      aria-autocomplete="list"
      aria-controls="<generated>"
      aria-expanded="true"
      autocomplete="off"
      enterkeyhint="done"
      role="combobox"
    >
    <button
      aria-expanded="true"
      aria-label="Valg"
      type="button"
      aria-hidden="false"
      tabindex="-1"
    >
    </button>
    <button
      aria-label="Tøm"
      hidden
      type="reset"
      aria-hidden="false"
      tabindex="-1"
    >
    </button>
    <u-datalist
      data-nofilter
      data-sr-plural="%d forslag"
      data-sr-singular="%d forslag"
      popover="manual"
      role="listbox"
      data-sr-of="of"
      tabindex="-1"
      aria-multiselectable="false"
      id="<generated>"
      data-is-floating="true"
      aria-label="Skriv inn et tall mellom 1-6"
      style="<removed>"
      data-floating="bottom"
    >
      <u-option
        data-empty
        hidden
        label
        value
        role="option"
        aria-disabled="false"
        aria-selected="false"
        id="<generated>"
        aria-hidden="true"
      >
      </u-option>
      <u-option
        value="sogndal"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        id="<generated>"
        aria-hidden="false"
      >
        Sogndal
      </u-option>
      <u-option
        value="oslo"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        id="<generated>"
        aria-hidden="false"
      >
        Oslo
      </u-option>
      <u-option
        value="brønnøysund"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        id="<generated>"
        aria-hidden="false"
      >
        Brønnøysund
      </u-option>
      <u-option
        value="stavanger"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        id="<generated>"
        aria-hidden="false"
      >
        Stavanger
      </u-option>
      <u-option
        value="trondheim"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        id="<generated>"
        aria-hidden="false"
      >
        Trondheim
      </u-option>
      <u-option
        value="bergen"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        id="<generated>"
        aria-hidden="false"
      >
        Bergen
      </u-option>
      <u-option
        value="lillestrøm"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        id="<generated>"
        aria-hidden="false"
      >
        Lillestrøm
      </u-option>
    </u-datalist>
  </ds-suggestion>
</ds-field>
`;

exports[`Custom Filter Alt 2 1`] = `
<ds-field>
  <label for="<generated>">
    Skriv inn et tall mellom 1-6
  </label>
  <ds-suggestion>
    <input
      placeholder
      type="text"
      id="<generated>"
      list="<generated>"
      popovertarget="<generated>"
      aria-autocomplete="list"
      aria-controls="<generated>"
      aria-expanded="true"
      autocomplete="off"
      enterkeyhint="done"
      role="combobox"
    >
    <button
      aria-expanded="true"
      aria-label="Valg"
      type="button"
      aria-hidden="false"
      tabindex="-1"
    >
    </button>
    <button
      aria-label="Tøm"
      hidden
      type="reset"
      aria-hidden="false"
      tabindex="-1"
    >
    </button>
    <u-datalist
      data-nofilter
      data-sr-plural="%d forslag"
      data-sr-singular="%d forslag"
      popover="manual"
      role="listbox"
      data-sr-of="of"
      tabindex="-1"
      aria-multiselectable="false"
      id="<generated>"
      data-is-floating="true"
      aria-label="Skriv inn et tall mellom 1-6"
      style="<removed>"
      data-floating="bottom"
    >
      <u-option
        data-empty
        hidden
        label
        value
        role="option"
        aria-disabled="false"
        aria-selected="false"
        id="<generated>"
        aria-hidden="true"
      >
      </u-option>
      <u-option
        role="option"
        aria-disabled="false"
        aria-selected="false"
        id="<generated>"
        aria-hidden="false"
      >
        Sogndal
      </u-option>
      <u-option
        role="option"
        aria-disabled="false"
        aria-selected="false"
        id="<generated>"
        aria-hidden="false"
      >
        Oslo
      </u-option>
      <u-option
        role="option"
        aria-disabled="false"
        aria-selected="false"
        id="<generated>"
        aria-hidden="false"
      >
        Brønnøysund
      </u-option>
      <u-option
        role="option"
        aria-disabled="false"
        aria-selected="false"
        id="<generated>"
        aria-hidden="false"
      >
        Stavanger
      </u-option>
      <u-option
        role="option"
        aria-disabled="false"
        aria-selected="false"
        id="<generated>"
        aria-hidden="false"
      >
        Trondheim
      </u-option>
      <u-option
        role="option"
        aria-disabled="false"
        aria-selected="false"
        id="<generated>"
        aria-hidden="false"
      >
        Bergen
      </u-option>
      <u-option
        role="option"
        aria-disabled="false"
        aria-selected="false"
        id="<generated>"
        aria-hidden="false"
      >
        Lillestrøm
      </u-option>
    </u-datalist>
  </ds-suggestion>
</ds-field>
`;

exports[`Default Value 1`] = `
<ds-field>
  <label for="<generated>">
    Velg en destinasjon
  </label>
  <ds-suggestion>
    <data
      value="Sogndal"
      aria-label="Sogndal, Press to remove"
      role="option"
      slot="items"
      tabindex="-1"
    >
      Sogndal
    </data>
    <input
      placeholder
      type="text"
      id="<generated>"
      list="<generated>"
      popovertarget="<generated>"
      aria-autocomplete="list"
      aria-controls="<generated>"
      aria-expanded="true"
      autocomplete="off"
      enterkeyhint="done"
      role="combobox"
    >
    <button
      aria-expanded="true"
      aria-label="Valg"
      type="button"
      aria-hidden="false"
      hidden
      tabindex="-1"
    >
    </button>
    <button
      aria-label="Tøm"
      type="reset"
      aria-hidden="false"
      tabindex="-1"
    >
    </button>
    <u-datalist
      data-nofilter
      data-sr-plural="%d forslag"
      data-sr-singular="%d forslag"
      popover="manual"
      role="listbox"
      data-sr-of="of"
      tabindex="-1"
      aria-multiselectable="false"
      id="<generated>"
      data-is-floating="true"
      aria-label="Velg en destinasjon"
      style="<removed>"
      data-floating="bottom"
    >
      <u-option
        data-empty
        hidden
        label="Sogndal"
        value
        role="option"
        aria-disabled="false"
        aria-selected="false"
        id="<generated>"
        aria-hidden="true"
      >
      </u-option>
      <u-option
        selected
        role="option"
        aria-disabled="false"
        aria-selected="true"
        id="<generated>"
        aria-hidden="false"
      >
        Sogndal
      </u-option>
      <u-option
        role="option"
        aria-disabled="true"
        aria-selected="false"
        id="<generated>"
        disabled
        aria-hidden="true"
      >
        Oslo
      </u-option>
      <u-option
        role="option"
        aria-disabled="true"
        aria-selected="false"
        id="<generated>"
        disabled
        aria-hidden="true"
      >
        Brønnøysund
      </u-option>
      <u-option
        role="option"
        aria-disabled="true"
        aria-selected="false"
        id="<generated>"
        disabled
        aria-hidden="true"
      >
        Stavanger
      </u-option>
      <u-option
        role="option"
        aria-disabled="true"
        aria-selected="false"
        id="<generated>"
        disabled
        aria-hidden="true"
      >
        Trondheim
      </u-option>
      <u-option
        role="option"
        aria-disabled="true"
        aria-selected="false"
        id="<generated>"
        disabled
        aria-hidden="true"
      >
        Bergen
      </u-option>
      <u-option
        role="option"
        aria-disabled="true"
        aria-selected="false"
        id="<generated>"
        disabled
        aria-hidden="true"
      >
        Lillestrøm
      </u-option>
    </u-datalist>
  </ds-suggestion>
</ds-field>
`;

exports[`Fetch External 1`] = `
<ds-field lang="en">
  <label for="<generated>">
    Search for countries (in english)
  </label>
  <ds-suggestion>
    <input
      placeholder
      type="text"
      id="<generated>"
      list="<generated>"
      popovertarget="<generated>"
      aria-autocomplete="list"
      aria-controls="<generated>"
      aria-expanded="true"
      autocomplete="off"
      enterkeyhint="done"
      role="combobox"
    >
    <button
      aria-expanded="true"
      aria-label="Options"
      type="button"
      aria-hidden="false"
      tabindex="-1"
    >
    </button>
    <button
      aria-label="Clear"
      hidden
      type="reset"
      aria-hidden="false"
      tabindex="-1"
    >
    </button>
    <u-datalist
      data-nofilter
      data-sr-plural="%d countries"
      data-sr-singular="%d country"
      popover="manual"
      role="listbox"
      data-sr-of="of"
      tabindex="-1"
      aria-multiselectable="false"
      id="<generated>"
      data-is-floating="true"
      aria-label="Search for countries (in english)"
      style="<removed>"
      data-floating="bottom"
    >
    </u-datalist>
  </ds-suggestion>
</ds-field>
`;

exports[`In Details 1`] = `
<details>
  <summary>
    Åpne details som har overflow: clip;
  </summary>
  <div>
    <ds-field>
      <label for="<generated>">
        Velg en destinasjon
      </label>
      <ds-suggestion autofocus>
        <input
          placeholder
          type="text"
          id="<generated>"
          list="<generated>"
          popovertarget="<generated>"
          aria-autocomplete="list"
          aria-controls="<generated>"
          aria-expanded="true"
          autocomplete="off"
          enterkeyhint="done"
          role="combobox"
        >
        <button
          aria-expanded="true"
          aria-label="Valg"
          type="button"
          aria-hidden="false"
          tabindex="-1"
        >
        </button>
        <button
          aria-label="Tøm"
          hidden
          type="reset"
          aria-hidden="false"
          tabindex="-1"
        >
        </button>
        <u-datalist
          data-nofilter
          data-sr-plural="%d forslag"
          data-sr-singular="%d forslag"
          popover="manual"
          role="listbox"
          data-sr-of="of"
          tabindex="-1"
          aria-multiselectable="false"
          id="<generated>"
          data-is-floating="true"
          aria-label="Velg en destinasjon"
          style="<removed>"
          data-floating="bottom"
        >
          <u-option
            data-empty
            hidden
            label
            value
            role="option"
            aria-disabled="false"
            aria-selected="false"
            id="<generated>"
            aria-hidden="true"
          >
          </u-option>
          <u-option
            role="option"
            aria-disabled="false"
            aria-selected="false"
            id="<generated>"
            aria-hidden="false"
          >
            Sogndal
          </u-option>
          <u-option
            role="option"
            aria-disabled="false"
            aria-selected="false"
            id="<generated>"
            aria-hidden="false"
          >
            Oslo
          </u-option>
          <u-option
            role="option"
            aria-disabled="false"
            aria-selected="false"
            id="<generated>"
            aria-hidden="false"
          >
            Brønnøysund
          </u-option>
          <u-option
            role="option"
            aria-disabled="false"
            aria-selected="false"
            id="<generated>"
            aria-hidden="false"
          >
            Stavanger
          </u-option>
          <u-option
            role="option"
            aria-disabled="false"
            aria-selected="false"
            id="<generated>"
            aria-hidden="false"
          >
            Trondheim
          </u-option>
          <u-option
            role="option"
            aria-disabled="false"
            aria-selected="false"
            id="<generated>"
            aria-hidden="false"
          >
            Bergen
          </u-option>
          <u-option
            role="option"
            aria-disabled="false"
            aria-selected="false"
            id="<generated>"
            aria-hidden="false"
          >
            Lillestrøm
          </u-option>
        </u-datalist>
      </ds-suggestion>
    </ds-field>
  </div>
</details>
`;

exports[`Multiple 1`] = `
<ds-field>
  <label for="<generated>">
    Velg en destinasjon
  </label>
  <ds-suggestion data-multiple>
    <input
      placeholder
      type="text"
      id="<generated>"
      aria-description="No selected"
      list="<generated>"
      popovertarget="<generated>"
      aria-autocomplete="list"
      aria-controls="<generated>"
      aria-expanded="true"
      autocomplete="off"
      enterkeyhint="done"
      role="combobox"
    >
    <button
      aria-expanded="true"
      aria-label="Valg"
      type="button"
      aria-hidden="false"
      tabindex="-1"
    >
    </button>
    <button
      aria-label="Tøm"
      hidden
      type="reset"
      aria-hidden="false"
      tabindex="-1"
    >
    </button>
    <u-datalist
      data-nofilter
      data-sr-plural="%d forslag"
      data-sr-singular="%d forslag"
      popover="manual"
      role="listbox"
      data-sr-of="of"
      tabindex="-1"
      aria-multiselectable="true"
      id="<generated>"
      data-is-floating="true"
      aria-label="Velg en destinasjon"
      style="<removed>"
      data-floating="bottom"
    >
      <u-option
        data-empty
        hidden
        label
        value
        role="option"
        aria-disabled="false"
        aria-selected="false"
        id="<generated>"
        aria-hidden="true"
      >
      </u-option>
      <u-option
        label="Sogndal"
        value="Sogndal"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        id="<generated>"
        aria-hidden="false"
      >
        Sogndal
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Oslo"
        value="Oslo"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        id="<generated>"
        aria-hidden="false"
      >
        Oslo
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Brønnøysund"
        value="Brønnøysund"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        id="<generated>"
        aria-hidden="false"
      >
        Brønnøysund
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Stavanger"
        value="Stavanger"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        id="<generated>"
        aria-hidden="false"
      >
        Stavanger
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Trondheim"
        value="Trondheim"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        id="<generated>"
        aria-hidden="false"
      >
        Trondheim
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Bergen"
        value="Bergen"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        id="<generated>"
        aria-hidden="false"
      >
        Bergen
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Lillestrøm"
        value="Lillestrøm"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        id="<generated>"
        aria-hidden="false"
      >
        Lillestrøm
        <div>
          Kommune
        </div>
      </u-option>
    </u-datalist>
  </ds-suggestion>
</ds-field>
`;

exports[`Multiple Count 1`] = `
<ds-field>
  <label for="<generated>">
    Velg destinasjoner
  </label>
  <ds-suggestion
    data-multiple
    data-display="count"
  >
    <data
      value="Oslo"
      aria-label="Oslo, Press to remove"
      role="option"
      slot="items"
      tabindex="-1"
    >
      Oslo
    </data>
    <data
      value="Sogndal"
      aria-label="Sogndal, Press to remove"
      role="option"
      slot="items"
      tabindex="-1"
    >
      Sogndal
    </data>
    <input
      placeholder
      type="text"
      id="<generated>"
      aria-description="Navigate left to find 2 selected"
      list="<generated>"
      popovertarget="<generated>"
      aria-autocomplete="list"
      aria-controls="<generated>"
      aria-expanded="true"
      autocomplete="off"
      enterkeyhint="done"
      role="combobox"
    >
    <button
      aria-expanded="true"
      aria-label="Valg"
      type="button"
      aria-hidden="false"
      tabindex="-1"
    >
    </button>
    <button
      aria-label="Tøm"
      hidden
      type="reset"
      aria-hidden="false"
      tabindex="-1"
    >
    </button>
    <u-datalist
      data-nofilter
      data-sr-plural="%d forslag"
      data-sr-singular="%d forslag"
      popover="manual"
      role="listbox"
      data-sr-of="of"
      tabindex="-1"
      aria-multiselectable="true"
      id="<generated>"
      data-is-floating="true"
      aria-label="Velg destinasjoner"
      style="<removed>"
      data-floating="bottom"
    >
      <u-option
        data-empty
        hidden
        label
        value
        role="option"
        aria-disabled="false"
        aria-selected="false"
        id="<generated>"
        aria-hidden="true"
      >
      </u-option>
      <u-option
        label="Sogndal"
        value="Sogndal"
        selected
        role="option"
        aria-disabled="false"
        aria-selected="true"
        id="<generated>"
        aria-hidden="false"
      >
        Sogndal
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Oslo"
        value="Oslo"
        selected
        role="option"
        aria-disabled="false"
        aria-selected="true"
        id="<generated>"
        aria-hidden="false"
      >
        Oslo
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Brønnøysund"
        value="Brønnøysund"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        id="<generated>"
        aria-hidden="false"
      >
        Brønnøysund
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Stavanger"
        value="Stavanger"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        id="<generated>"
        aria-hidden="false"
      >
        Stavanger
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Trondheim"
        value="Trondheim"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        id="<generated>"
        aria-hidden="false"
      >
        Trondheim
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Bergen"
        value="Bergen"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        id="<generated>"
        aria-hidden="false"
      >
        Bergen
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Lillestrøm"
        value="Lillestrøm"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        id="<generated>"
        aria-hidden="false"
      >
        Lillestrøm
        <div>
          Kommune
        </div>
      </u-option>
    </u-datalist>
  </ds-suggestion>
</ds-field>
`;

exports[`Multiple Creatable 1`] = `
<ds-field>
  <label for="<generated>">
    Velg en destinasjon
  </label>
  <ds-suggestion
    data-multiple
    data-creatable
  >
    <data
      value="Finnes ikke"
      aria-label="Added Heller ikke, Finnes ikke, Press to remove"
      role="option"
      slot="items"
      tabindex="-1"
    >
      Finnes ikke
    </data>
    <data
      value="Heller ikke"
      aria-label="Added Heller ikke, Heller ikke, Press to remove"
      role="option"
      slot="items"
      tabindex="-1"
    >
      Heller ikke
    </data>
    <input
      placeholder
      type="text"
      id="<generated>"
      aria-description="Navigate left to find 2 selected"
      list="<generated>"
      popovertarget="<generated>"
      aria-autocomplete="list"
      aria-controls="<generated>"
      aria-expanded="true"
      autocomplete="off"
      enterkeyhint="done"
      role="combobox"
      aria-label="Added Heller ikke, Added Finnes ikke, Velg en destinasjon"
    >
    <button
      aria-expanded="true"
      aria-label="Valg"
      type="button"
      aria-hidden="false"
      tabindex="-1"
      hidden
    >
    </button>
    <button
      aria-label="Tøm"
      type="reset"
      aria-hidden="false"
      tabindex="-1"
    >
    </button>
    <u-datalist
      data-nofilter
      data-sr-plural="%d forslag"
      data-sr-singular="%d forslag"
      popover="manual"
      role="listbox"
      data-sr-of="of"
      tabindex="-1"
      aria-multiselectable="true"
      id="<generated>"
      data-is-floating="true"
      aria-label="Velg en destinasjon"
      style="<removed>"
      data-floating="bottom"
    >
      <u-option
        data-empty="Legg til «{value}»"
        label="Heller ikke"
        value="Heller ikke"
        data-create="Legg til «Heller ikke»"
        role="option"
        aria-disabled="false"
        aria-selected="true"
        id="<generated>"
        aria-hidden="false"
        selected
      >
      </u-option>
      <u-option
        label="Sogndal"
        value="Sogndal"
        role="option"
        aria-disabled="true"
        aria-selected="false"
        id="<generated>"
        aria-hidden="true"
        disabled
      >
        Sogndal
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Oslo"
        value="Oslo"
        role="option"
        aria-disabled="true"
        aria-selected="false"
        id="<generated>"
        aria-hidden="true"
        disabled
      >
        Oslo
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Brønnøysund"
        value="Brønnøysund"
        role="option"
        aria-disabled="true"
        aria-selected="false"
        id="<generated>"
        aria-hidden="true"
        disabled
      >
        Brønnøysund
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Stavanger"
        value="Stavanger"
        role="option"
        aria-disabled="true"
        aria-selected="false"
        id="<generated>"
        aria-hidden="true"
        disabled
      >
        Stavanger
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Trondheim"
        value="Trondheim"
        role="option"
        aria-disabled="true"
        aria-selected="false"
        id="<generated>"
        aria-hidden="true"
        disabled
      >
        Trondheim
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Bergen"
        value="Bergen"
        role="option"
        aria-disabled="true"
        aria-selected="false"
        id="<generated>"
        aria-hidden="true"
        disabled
      >
        Bergen
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Lillestrøm"
        value="Lillestrøm"
        role="option"
        aria-disabled="true"
        aria-selected="false"
        id="<generated>"
        aria-hidden="true"
        disabled
      >
        Lillestrøm
        <div>
          Kommune
        </div>
      </u-option>
    </u-datalist>
  </ds-suggestion>
</ds-field>
`;

exports[`Preview 1`] = `
<ds-field>
  <label for="<generated>">
    Velg en destinasjon
  </label>
  <ds-suggestion>
    <input
      placeholder
      type="text"
      id="<generated>"
      list="<generated>"
      popovertarget="<generated>"
      aria-autocomplete="list"
      aria-controls="<generated>"
      aria-expanded="true"
      autocomplete="off"
      enterkeyhint="done"
      role="combobox"
    >
    <button
      aria-expanded="true"
      aria-label="Valg"
      type="button"
      aria-hidden="false"
      tabindex="-1"
    >
    </button>
    <button
      aria-label="Tøm"
      hidden
      type="reset"
      aria-hidden="false"
      tabindex="-1"
    >
    </button>
    <u-datalist
      data-nofilter
      data-sr-plural="%d forslag"
      data-sr-singular="%d forslag"
      popover="manual"
      role="listbox"
      data-sr-of="of"
      tabindex="-1"
      aria-multiselectable="false"
      id="<generated>"
      data-is-floating="true"
      aria-label="Velg en destinasjon"
      style="<removed>"
      data-floating="bottom"
    >
      <u-option
        data-empty
        hidden
        label
        value
        role="option"
        aria-disabled="false"
        aria-selected="false"
        id="<generated>"
        aria-hidden="true"
      >
      </u-option>
      <u-option
        label="Sogndal"
        value="Sogndal"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        id="<generated>"
        aria-hidden="false"
      >
        Sogndal
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Oslo"
        value="Oslo"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        id="<generated>"
        aria-hidden="false"
      >
        Oslo
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Brønnøysund"
        value="Brønnøysund"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        id="<generated>"
        aria-hidden="false"
      >
        Brønnøysund
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Stavanger"
        value="Stavanger"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        id="<generated>"
        aria-hidden="false"
      >
        Stavanger
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Trondheim"
        value="Trondheim"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        id="<generated>"
        aria-hidden="false"
      >
        Trondheim
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Bergen"
        value="Bergen"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        id="<generated>"
        aria-hidden="false"
      >
        Bergen
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Lillestrøm"
        value="Lillestrøm"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        id="<generated>"
        aria-hidden="false"
      >
        Lillestrøm
        <div>
          Kommune
        </div>
      </u-option>
    </u-datalist>
  </ds-suggestion>
</ds-field>
`;
